added archive to config.yml

--- a/lib/new_site/config.yml
+++ b/lib/new_site/config.yml
@@ -7,6 +7,9 @@ permalink:
   pretty: true
 tagged:
   style: tagged
+archive:
+  style: archive
+  period: :month
 homepage: index
 include_assets:
  - css
