changed public_dir to destination

--- a/lib/new_site/config.yml
+++ b/lib/new_site/config.yml
@@ -2,7 +2,7 @@ name: Your Website Name
 port: 1619
 basepath: /
 assets: assets
-public_dir: public
+destination: public
 permalink:
   style: :name
   pretty: true
