removed style and period from archive yaml

--- a/lib/new_site/config.yml
+++ b/lib/new_site/config.yml
@@ -8,9 +8,7 @@ permalink:
   pretty: true
 tagged:
   style: tagged
-archive:
-  style: archive
-  period: :month
+archive: archive
 homepage: index
 include_assets:
  - css
