removed style from tagged and simplified in config of tags

--- a/lib/new_site/config.yml
+++ b/lib/new_site/config.yml
@@ -6,8 +6,7 @@ destination: public
 permalink:
   style: :name
   pretty: true
-tagged:
-  style: tagged
+tagged: tagged
 archive: archive
 homepage: index
 include_assets:
