modified tagged key in new_site config

--- a/lib/new_site/config.yml
+++ b/lib/new_site/config.yml
@@ -6,7 +6,9 @@ destination: public
 permalink:
   style: :name
   pretty: true
-tagged: tagged
+tagged: 
+  name: tagged
+  permalink: /
 archive: archive
 homepage: index
 include_assets:
